--- a/summer_2025/rag.ipynb
+++ b/summer_2025/rag.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python Information:\n",
+      "Python executable: /Users/sujeethjinesh/Desktop/ME344/summer_2025/.venv/bin/python3.11\n",
+      "Python version: 3.11.6 (v3.11.6:8b6ee5ba3b, Oct  2 2023, 11:18:21) [Clang 13.0.0 (clang-1300.0.29.30)]\n",
+      "Current working directory: /Users/sujeethjinesh/Desktop/ME344/summer_2025\n",
+      "✓ Using project virtual environment\n"
+     ]
+    }
+   ],
    "source": [
     "# First, let's make sure we're using the right Python environment\n",
     "import sys\n",
@@ -26,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python: /Users/sujeethjinesh/Desktop/ME344/summer_2025/.venv/bin/python3.11\n",
+      "✅ ChromaDB version: 0.4.24\n",
+      "✅ LangChain community imports working\n",
+      "✅ Requests library available\n"
+     ]
+    }
+   ],
    "source": [
     "# Test imports to ensure we have the right environment\n",
     "import sys\n",
@@ -106,9 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully loaded 123172 documents\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if data file exists\n",
     "data_file_path = './data/cleaned_slang_data.csv'\n",
@@ -135,9 +166,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "page_content='word: bank\n",
+      "definition: another cash money word' metadata={'source': './data/cleaned_slang_data.csv', 'row': 0}\n",
+      "<class 'list'>\n",
+      "<class 'langchain_core.documents.base.Document'>\n",
+      "There are 123172 documents\n"
+     ]
+    }
+   ],
    "source": [
     "print(slang_document[0])\n",
     "print(type(slang_document))\n",
@@ -160,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,9 +229,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "page_content='word: bank\n",
+      "definition: another cash money word' metadata={'source': './data/cleaned_slang_data.csv', 'row': 0}\n",
+      "124060\n"
+     ]
+    }
+   ],
    "source": [
     "print(chunks[0])\n",
     "print(len(chunks))"
@@ -205,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,9 +374,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using custom Ollama embedding function\n",
+      "Embedding dimension: 768\n",
+      "First 10 values: [1.518409252166748, 1.6257004737854004, -3.643442153930664, -0.38027846813201904, 0.4524954557418823, -0.8147395849227905, 0.3174838125705719, -0.46331557631492615, 0.07126598060131073, -0.31656473875045776]\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the robust embedding function\n",
     "embedding_function = get_embedding_function()\n",
@@ -347,9 +410,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'score': 0.4449275362318841}\n",
+      "{'score': 0.0}\n",
+      "{'score': 0.4842995169082126}\n",
+      "{'score': 0.525672877846791}\n"
+     ]
+    }
+   ],
    "source": [
     "evaluator = load_evaluator(\"pairwise_string_distance\")\n",
     "\n",
@@ -377,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,9 +471,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Successfully connected to ChromaDB\n",
+      "✅ Collection 'llm_rag_collection' ready\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize our chromadb client locally with special port number so we don't conflict with other things running\n",
     "try:\n",
@@ -434,9 +517,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing 500 documents...\n",
+      "📚 Processing documents...\n",
+      "Number of existing documents in collection: 900\n",
+      "✅ No new documents to add\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_chunk_ids(chunks):\n",
     "    \"\"\"Calculate deterministic chunk IDs using SHA256 hash\"\"\"\n",
@@ -558,9 +652,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total documents in collection: 900\n",
+      "\n",
+      "Testing query: 'What does 'jank' mean?'\n",
+      "\n",
+      "Top 3 results:\n",
+      "\n",
+      "1. word: Janky\n",
+      "definition: Undesirable; less-than optimum....\n",
+      "\n",
+      "2. word: Janky\n",
+      "definition: Far from perfect; messed up...\n",
+      "\n",
+      "3. word: Janky\\ndefinition: Far from perfect; messed up...\n"
+     ]
+    }
+   ],
    "source": [
     "# Verify the collection has data\n",
     "collection_count = collection.count()\n",
